# Kurrent

./: .gitignore  Cargo.toml  README.md
docs/: AUDIT_AGGREGATE_6134cad.md  AUDIT_CONSOLIDATED_2026-06-27.md  AUDIT_KURRENT_FULL_2026-06-28.md  AUDIT_UX_INTERACTION_SAFETY_2026-06-30.md  DELIVERY_SUMMARY.txt  KASPA_TOCCATA_CAPABILITIES.md  KURRENT_BLOCKERS.md  KURRENT_DEVNET_EVIDENCE.md  KURRENT_FACTORY_COMMITMENT_DESIGN.md  KURRENT_FACTORY_MODE.md  KURRENT_INTERACTION_SAFETY_AUDIT.md  KURRENT_INVOICE_DESIGN.md  KURRENT_INVOICE_DESIGN_RESEARCH.md  KURRENT_LN_INTEROP.md  KURRENT_PRODUCTION_ACCEPTANCE.md  KURRENT_SCOPE.md  KURRENT_SECURITY_ASSUMPTIONS.md  KURRENT_STATE_CHANNEL_SPEC.md  KURRENT_THESIS.tex  PRODUCTION_KEY_MANAGEMENT.md  PRODUCTION_MONITORING.md  PRODUCTION_RECOVERY.md  PRODUCTION_ROLLOUT.md  PRODUCTION_SECURITY_REVIEW.md  PROMPT_AUDIT.md  audit-design-2026-06-28.md  audit-rigor-2026-06-28.md  audit-security-2026-06-28.md
drivers/kaspa-devnet/: Cargo.toml
drivers/kaspa-devnet/src/: main.rs
evidence/: kaspa-simnet-probe.json  kurrent-acceptance.json  kurrent-factory-flow-evidence.json  kurrent-factory-materialisation-model.json  kurrent-kaspa-to-ln-flow-evidence.json  kurrent-live-early-refund-rejected-tx.hex  kurrent-live-early-refund-rejected-witness.hex  kurrent-live-factory-evidence.json  kurrent-live-factory-funding-tx.hex  kurrent-live-factory-materialisation-tx.hex  kurrent-live-factory-materialisation-witness.hex  kurrent-live-factory-redeem-script.hex  kurrent-live-fee-sponsored-displacement-evidence.json  kurrent-live-fee-sponsored-higher-marker-tx.hex  kurrent-live-fee-sponsored-lower-marker-tx.hex  kurrent-live-funding-tx.hex  kurrent-live-kaspa-to-ln-evidence.json  kurrent-live-kaspa_to_ln-funding-tx.hex  kurrent-live-kaspa_to_ln-redeem-script.hex  kurrent-live-kaspa_to_ln-settlement-tx.hex  kurrent-live-kaspa_to_ln-settlement-witness.hex  kurrent-live-lane-monitor-evidence.json  kurrent-live-ln-to-kaspa-evidence.json  kurrent-live-ln_to_kaspa-funding-tx.hex  kurrent-live-ln_to_kaspa-redeem-script.hex  kurrent-live-ln_to_kaspa-settlement-tx.hex  kurrent-live-ln_to_kaspa-settlement-witness.hex  kurrent-live-native-lane-settlement-rejected-tx.hex  kurrent-live-native-lane-state-update-rejected-tx.hex  kurrent-live-refund-evidence.json  kurrent-live-refund-funding-tx.hex  kurrent-live-refund-redeem-script.hex  kurrent-live-refund-tx.hex  kurrent-live-refund-witness.hex  kurrent-live-settlement-candidate-higher-marker-tx.hex  kurrent-live-settlement-candidate-lower-marker-tx.hex  kurrent-live-settlement-candidate-wrong-lane-marker-tx.hex  kurrent-live-settlement-eligibility-evidence.json  kurrent-live-settlement-tx.hex  kurrent-live-settlement-witness.hex  (+29 more)
scripts/: check.sh  detect-tools.sh  prepare-devnet-tools.sh  prepare-security-review-package.sh  run-adversarial-soak.sh  run-factory-flow.sh  run-kaspa-devnet.sh  run-kaspa-to-ln-flow.sh  run-ln-devnet.sh  run-ln-to-kaspa-flow.sh  run-refund-flow.sh  run-semantic-transaction-verifier.sh  run-state-channel-flow.sh  setup.sh  verify-evidence.sh  verify-production-readiness.sh  (+1 more)
src/: client.rs  lib.rs
(+11 files in other folders)
