[package]
name = "kurrent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local development artefacts for Kurrent Protocol acceptance gating"

[lib]
name = "kurrent"
path = "src/lib.rs"

[[bin]]
name = "kurrentctl"
path = "src/bin/kurrentctl.rs"

[dependencies]
hex = "0.4"
secp256k1 = { version = "0.29.1", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
