[package]
name = "kurrent-kaspa-devnet-driver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
borsh = "1.5.1"
hex = "0.4"
kurrent = { path = "../.." }
kaspa-addresses = { path = "../../../rusty-kaspa-toccata/crypto/addresses" }
kaspa-consensus = { path = "../../../rusty-kaspa-toccata/consensus" }
kaspa-consensus-core = { path = "../../../rusty-kaspa-toccata/consensus/core" }
kaspa-grpc-client = { path = "../../../rusty-kaspa-toccata/rpc/grpc/client" }
kaspa-rpc-core = { path = "../../../rusty-kaspa-toccata/rpc/core" }
kaspa-testing-integration = { path = "../../../rusty-kaspa-toccata/testing/integration" }
kaspa-txscript = { path = "../../../rusty-kaspa-toccata/crypto/txscript" }
kaspad = { path = "../../../rusty-kaspa-toccata/kaspad" }
secp256k1 = { version = "0.29.1", features = ["global-context", "rand-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time" ] }
